--- a/dark-browser.css
+++ b/dark-browser.css
@@ -1,27 +1,27 @@
 html.dark-mode::-webkit-scrollbar-track { background-color: #192633; }
 html.dark-mode::-webkit-scrollbar-thumb { background-color: #fff; }
 
-/* Add sidebar */
+/*
+    Sidebar Darkening
+*/
+
 html.dark-mode #react-root ._onabe._kjy2s {
   background-color: #192633;
   border-right: 1px solid rgba(255,255,255,.08);
 }
 
-/* Very top rectangle of icon list */
 html.dark-mode #react-root ._4kdxu {
     background-color: #192633;
 }
 
-/* Icons list */
 html.dark-mode #react-root ._n7q2c {
   background-color: #192633;
 }
-/* Icon Item */
+
 html.dark-mode #react-root ._r1svv {
   -webkit-filter: brightness(0) invert(1);
 }
 
-/* Back Button */
 html.dark-mode .back-btn {
   background-color: #192633;
   border-top: 1px solid rgba(255, 255, 255, 0.0784314);
@@ -30,3 +30,27 @@ html.dark-mode .back-btn {
 
 html.dark-mode .back-btn svg { fill: #fff; }
 html.dark-mode .back-btn.inactive svg { fill: rgba(255, 255, 255, 0.2);  }
+
+/*
+    Login
+*/
+
+html.dark-mode #react-root ._6ltyr._1wptv {
+    background-color: #192633;
+}
+
+html.dark-mode #react-root ._p8ymb {
+    background-color: #192633;
+}
+
+html.dark-mode #react-root ._du7bh {
+  -webkit-filter: brightness(0) invert(1);
+}
+
+html.dark-mode #react-root ._nvyyp {
+    background-color: #192633;
+}
+
+html.dark-mode #react-root ._kp5f7._qy55y {
+    color: white;
+}
