--- a/dark-browser.css
+++ b/dark-browser.css
@@ -178,32 +178,61 @@ html.dark-mode #react-root ._769lo {
 /**
  * Profile
  */
+/* border after profile info */
+html.dark-mode #react-root ._o2h6b {
+  border-color: #23303c;
+}
+
+/* username */
 html.dark-mode #react-root ._i572c {
-  color: #bbb;
+  color: #bcc0c4;
 }
 
+/* name */
 html.dark-mode #react-root ._79dar {
-  color: #bbb;
+  color: #bcc0c4;
 }
 
+/* desc */
 html.dark-mode #react-root ._bugdy span {
-  color: #bbb;
+  color: #bcc0c4;
 }
 
+/* followers, following */
 html.dark-mode #react-root ._s53mj._13vpi {
-  color: #ddd;
+  color: #bcc0c4;
+}
+html.dark-mode #react-root ._bkw5z._kjym7 {
+  color: #bcc0c4;
 }
 
-html.dark-mode #react-root ._bkw5z._kjym7 {
-  color: #ddd;
+/* profile picture */
+html.dark-mode #react-root ._8gpiy {
+  border-color: #23303c;
+}
+
+
+/**
+ * Photo view
+ */
+/* time */
+html.dark-mode #react-root ._379kp {
+  color: #788088;
 }
 
 
 /*
  * Notifications (likes)
  */
+
+/* text */
 html.dark-mode #react-root ._auspy {
-  color: #bbb;
+  color: #bcc0c4;
+}
+
+/* border */
+html.dark-mode #react-root ._mkiio::after {
+  border-color: #23303c;
 }
 
 
@@ -212,10 +241,18 @@ html.dark-mode #react-root ._auspy {
  */
 html.dark-mode #react-root ._q44m8 {
   background-color: #192633;
-  color: #ddd;
+  color: #bcc0c4;
 }
 
 html.dark-mode #react-root ._cx1ua {
   background-color: #192633;
   border-color: #23303c;
+}
+
+
+/**
+ * Edit profile page
+ */
+html.dark-mode #react-root ._40h7m {
+  background-color: #192633;
 }
