--- a/browser.css
+++ b/browser.css
@@ -19,6 +19,10 @@ html.os-win32 {
 	overflow-y: scroll !important;
 }
 
+body {
+  -webkit-app-region: drag;
+}
+
 .logged-in main { }
 
 /* Hide 'Open in app' popup */
@@ -56,7 +60,6 @@ footer._oofbn {
 	-webkit-app-region: drag; /* Make the navbar the windows's draggable region */
 	will-change: left, top;
 	display: block;
-  cursor: move;
 }
 
 /* Reset topbar and move to vertical menu on the left */
@@ -230,4 +233,39 @@ html.os-win32 .back-btn { top: 0; }
 #react-root ._40h7m {
   border: none;
   margin: 0;
+}
+
+/**
+* icon hover
+*/
+._o5rm6 {
+  opacity: 1;
+}
+
+._o5rm6:hover {
+  opacity: 0.4;
+}
+
+.electron_pic_hover {
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.electron_topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 36px;
+  background: lightblue;
 }
