--- a/browser.css
+++ b/browser.css
@@ -248,3 +248,32 @@ html.os-win32 .back-btn { top: 0; }
   border: none;
   margin: 0;
 }
+
+body {
+  -webkit-app-region: drag;
+}
+
+/**
+* icon hover
+*/
+._o5rm6 {
+  opacity: 1;
+}
+
+._o5rm6:hover {
+  opacity: 0.4;
+}
+
+.electron_pic_cover {
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
