--- a/browser.css
+++ b/browser.css
@@ -13,13 +13,17 @@
 /* remove focus glow */
 * { outline: none; }
 
+html {
+  cursor: default!important;
+}
+
 /* force a scrollbar on Linux and Windows to prevent jumping when changing tabs */
 html.os-linux,
 html.os-win32 {
-	overflow-y: scroll !important;
+	overflow-y: scroll!important;
 }
 
-.logged-in main { }
+.logged-in main {}
 
 /* Hide 'Open in app' popup */
 ._28zbs._nqfwp {
@@ -53,23 +57,22 @@ footer._oofbn {
   width: 80px;
   height: 100%;
   border-right: 1px solid rgba(0,0,0,.08);
-	-webkit-app-region: drag; /* Make the navbar the windows's draggable region */
 	will-change: left, top;
 	display: block;
 }
 
-/* Reset topbar and move to vertical menu on the left */
+/* Make sidebar dragable */
 #react-root,
 #react-root > section,
 #react-root > section > nav {
   -webkit-user-select: none;
   -webkit-app-region: drag;
 }
-
 #react-root > section > main {
   -webkit-app-region: no-drag;
 }
 
+/* Remove sidebar border, and position */
 #react-root ._bfc7q {
   position: absolute;
   border: none;
