Changed styles’ subfolder names and added theme building to Gulp

--- a/app/src/renderer/styles/app.scss
+++ b/app/src/renderer/styles/app.scss
@@ -1,6 +1,5 @@
 /* Ramme */
-@import 'ramme/fixes';
-@import 'ramme/login';
-@import 'ramme/profile';
-@import 'ramme/sidebar';
-@import 'ramme-dark/theme';
+@import 'core/fixes';
+@import 'core/login';
+@import 'core/profile';
+@import 'core/sidebar';
