Updated dark style

--- a/app/src/renderer/styles/core/_fixes.scss
+++ b/app/src/renderer/styles/core/_fixes.scss
@@ -28,11 +28,11 @@ html {
 }
 
 /* Hide 'Open in app' popup and button */
-._28zbs {
-  &._nqfwp,
-  &._nl1vc {
-    display: none;
-  }
+._28zbs,
+._nqfwp,
+._nl1vc,
+._28zbs, {
+  display: none;
 }
 
 /* Hide footer */
