--- a/app/src/renderer/styles/theme-dark/_fixes.scss
+++ b/app/src/renderer/styles/theme-dark/_fixes.scss
@@ -1,48 +1,48 @@
 html.dark-mode::-webkit-scrollbar-track {
-  background-color: #192633;
+  background-color: $dark;
 }
 
 html.dark-mode::-webkit-scrollbar-thumb {
-  background-color: #fff;
+  background-color: $white;
 }
 
 html.dark-mode #react-root {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* Main container */
 html.dark-mode #react-root main {
-  background-color: #192633;
+  background-color: $dark;
 }
 
 /* Links */
 html.dark-mode #react-root a,
 html.dark-mode #react-root a:visited {
-  color: #5b99ba;
+  color: $blue;
 }
 
 /* Username */
 html.dark-mode #react-root ._4zhc5,
 html.dark-mode #react-rrot ._4zhc5:visited,
 html.dark-mode #react-root ._2uju6 {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* photo container bg */
 html.dark-mode #react-root ._22yr2 {
-  background-color: #192633;
+  background-color: $dark;
   border-style: none;
 }
 
 /* photo border, split */
 html.dark-mode #react-root ._pieko ._e0mru {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 
 /* Profile thumbnail */
 html.dark-mode #react-root ._5lote {
-  background-color: #192633;
-  border: 1px solid #23303c;
+  background-color: $dark;
+  border: 1px solid $darkLight;
 }
 
 /* photo desc */
@@ -54,34 +54,34 @@ html.dark-mode #react-root ._oajsw {
 
 /* split */
 html.dark-mode #react-root ._jveic {
-  border-top: 1px solid #23303c;
+  border-top: 1px solid $darkLight;
 }
 
 /* time-stamp */
 html.dark-mode #react-root ._ljyfo,
 html.dark-mode #react-root ._ljyfo:visited {
-  color: #788088;
+  color: $gray;
 }
 
 /* location */
 html.dark-mode #react-root ._rnlnu {
-  color: #788088;
+  color: $gray;
 }
 
 /* likes */
 html.dark-mode #react-root ._3sst1 {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /*add profile photo popup*/
 html.dark-mode #react-root ._82fo9._29u55 {
-  background-color: #202c3a;
+  background-color: $dark;
   border-bottom: 1px solid rgba(255, 255, 255, .08);
 }
 
 /*comment input text color*/
 html.dark-mode #react-root ._7uiwk._qy55y {
-  color: #fafafa;
+  color: $white;
 }
 
 /* Dialog */
@@ -89,7 +89,7 @@ html.dark-mode ._bt6iq,
 html.dark-mode ._gwvmk,
 html.dark-mode ._bt6iq,
 html.dark-mode ._4y3e3 {
-  color: #bcc0c4;
-  border-color: #23303c;
-  background-color: #192633;
+  color: $bright;
+  border-color: $darkLight;
+  background-color: $dark;
 }
