--- a/app/src/renderer/styles/theme-dark/_login.scss
+++ b/app/src/renderer/styles/theme-dark/_login.scss
@@ -4,7 +4,7 @@ html.dark-mode #react-root ._du7bh {
 }
 
 html.dark-mode #react-root ._kp5f7._qy55y {
-  color: #bcc0c4;
-  background-color: #303b47;
-  border-color: #303b47;
+  color: $bright;
+  background-color: $dark;
+  border-color: $dark;
 }
