--- a/app/src/renderer/styles/theme-dark/_profile.scss
+++ b/app/src/renderer/styles/theme-dark/_profile.scss
@@ -1,85 +1,87 @@
 /* edit button */
-html.dark-mode #react-root ._je2uz {
-  color: #788088;
+html.dark-mode #react-root ._aj7mu._a89os {
+  color: $gray;
   border-color: #303b47;
 }
 
 /* load more */
-html.dark-mode #react-root ._1ooyk,
-html.dark-mode #react-root ._oidfu {
-  color: #3897f0;
+//html.dark-mode #react-root ._1ooyk,
+html.dark-mode #react-root ._8imhp._glz1g {
+  border-color: $blue;
+  background: $dark;
+  color: $blue;
 }
 
 /* border after profile info */
 html.dark-mode #react-root ._o2h6b,
 html.dark-mode #react-root ._1ooyk {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 
 /* username */
 html.dark-mode #react-root ._i572c {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* name */
 html.dark-mode #react-root ._79dar {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* Color split for profile header */
 html.dark-mode #react-root ._bugdy {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 
 /* desc */
 html.dark-mode #react-root ._bugdy span {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* followers, following */
 html.dark-mode #react-root ._s53mj._13vpi {
-  color: #bcc0c4;
+  color: $bright;
 }
 html.dark-mode #react-root ._bkw5z._kjym7 {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* profile picture */
 html.dark-mode #react-root ._8gpiy {
-  border-color: #23303c;
+  border-color: $dark;
 }
 
 /* Private profile */
 html.dark-mode #react-root ._76rrx {
-  background-color: #192633;
+  background-color: $darkLight;
   border: none;
 }
 html.dark-mode #react-root ._76rrx h2,
 html.dark-mode #react-root ._76rrx p {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /*Suggested*/
 html.dark-mode #react-root ._3p78u._28ejm._go7te._pn9fv::before {
-  background-color: #202c3a;
+  background-color: $dark;
   border-left: 1px solid rgba(80,80,80,.2);
   border-top: 1px solid rgba(80,80,80,.2);
 }
 html.dark-mode #react-root ._3p78u._28ejm._go7te._pn9fv {
-  background-color: #202c3a;
+  background-color: $dark;
   border-top: 1px solid rgba(80,80,80,.2);
   border-bottom: 1px solid rgba(80,80,80,.2);
 }
 
 /*Profile card*/
 html.dark-mode #react-root ._owacc._1po6t {
-  background-color: #29384A;
+  background-color: $darkLight;
   border: 1px solid rgba(0,0,0,.08);
 }
 
 /*http://i.imgur.com/1t7aeKW.png*/
 html.dark-mode #react-root ._azlhu{
-  background-color: #192633;
+  background-color: $darkLight;
 }
 
 /**
@@ -87,7 +89,7 @@ html.dark-mode #react-root ._azlhu{
  */
 /* time */
 html.dark-mode #react-root ._379kp {
-  color: #788088;
+  color: $bright;
 }
 
 
@@ -97,12 +99,12 @@ html.dark-mode #react-root ._379kp {
 
 /* text */
 html.dark-mode #react-root ._auspy {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* border */
 html.dark-mode #react-root ._mkiio::after {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 
 
@@ -110,13 +112,13 @@ html.dark-mode #react-root ._mkiio::after {
  * Tableviews (Following, Followers)
  */
 html.dark-mode #react-root ._q44m8 {
-  background-color: #192633;
-  color: #bcc0c4;
+  background-color: $dark;
+  color: $bright;
 }
 
 html.dark-mode #react-root ._cx1ua {
-  background-color: #192633;
-  border-color: #23303c;
+  background-color: $dark;
+  border-color: $darkLight;
 }
 
 
@@ -124,17 +126,17 @@ html.dark-mode #react-root ._cx1ua {
  * Edit profile page
  */
 html.dark-mode #react-root ._40h7m {
-  background-color: #192633;
+  background-color: $dark;
 }
 
 /* label */
 html.dark-mode #react-root ._891mt {
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* private label */
 html.dark-mode #react-root ._bgfey {
-  color: #788088;
+  color: $gray;
 }
 
 /* inputs */
@@ -143,10 +145,10 @@ html.dark-mode #react-root ._g6a4a,
 html.dark-mode #react-root ._cmoxu ._qy55y {
   background-color: #303b47;
   border: none;
-  color: #bcc0c4;
+  color: $bright;
 }
 
 /* terms */
 html.dark-mode #react-root ._lxlnj {
-  color: #bcc0c4;
+  color: $bright;
 }
