--- a/app/src/renderer/styles/theme-dark/_search.scss
+++ b/app/src/renderer/styles/theme-dark/_search.scss
@@ -1,21 +1,25 @@
 /* discover text */
 html.dark-mode #react-root ._bgfey {
-  color: #788088;
+  color: $gray;
 }
 
 /* search field bg */
 html.dark-mode #react-root ._oyz6j {
-  background-color: #192633;
+  background-color: $dark;
+}
+
+/* search field hover */
+html.dark-mode #react-root ._xk9bu {
+  background-color: $darkLight;
 }
 
 /* username */
-html.dark-mode #react-root ._2uju6 {
-}
+html.dark-mode #react-root ._2uju6 { }
 
 /* seach field */
 html.dark-mode #react-root ._9x5sw,
 html.dark-mode #react-root ._55bi1 {
-  color: #bcc0c4;
+  color: $bright;
   background-color: #303b47;
   border-color: #303b47;
 }
@@ -28,28 +32,28 @@ html.dark-mode #react-root ._48qwd {
 
 /* search drop-down */
 html.dark-mode #react-root ._o1o4h {
-  background-color: #192633;
+  background-color: $dark;
   box-shadow: 0 0 5px rgba(0, 0, 0, .85);
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 html.dark-mode #react-root ._o1o4h::after {
-  border-color: transparent transparent #192633;
+  border-color: transparent transparent $dark;
 }
 html.dark-mode #react-root ._pnw2j {
-  background-color: #192633;
+  background-color: $dark;
   box-shadow: 0 0 5px rgba(0, 0, 0, .85);
 }
 html.dark-mode #react-root ._k2vj6 {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 html.dark-mode #react-root ._k2vj6 img {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
 html.dark-mode #react-root ._k2vj6 span {
-  color: #bcc0c4;
+  color: $gray;
 }
 
 /* border ul top */
 html.dark-mode #react-root ._769lo {
-  border-color: #23303c;
+  border-color: $darkLight;
 }
