Fixing app on 404 pages

--- a/app/src/renderer/styles/core/_fixes.scss
+++ b/app/src/renderer/styles/core/_fixes.scss
@@ -31,12 +31,13 @@ html {
 ._28zbs,
 ._nqfwp,
 ._nl1vc,
-._28zbs, {
+._28zbs {
   display: none;
 }
 
 /* Hide footer */
-section > footer {
+section > footer,
+.root > footer {
   display: none;
 }
 
