--- a/app/src/renderer/styles/core/_sidebar.scss
+++ b/app/src/renderer/styles/core/_sidebar.scss
@@ -4,7 +4,7 @@
 }
 
 /* Add sidebar */
-#react-root ._onabe._kjy2s {
+#react-root ._onabe {
   background-color: #fafafa;
   position: fixed;
   left: 0;
@@ -27,7 +27,7 @@
 }
 
 /* Remove sidebar border, and position */
-#react-root ._bfc7q {
+#react-root ._fjpuc > div > div {
   position: absolute;
   border: none;
 }
