--- a/app/src/renderer/styles/theme-dark/main.scss
+++ b/app/src/renderer/styles/theme-dark/main.scss
@@ -6,6 +6,7 @@ $blue: rgb(91, 153, 186);
 $white: rgb(255, 255, 255);
 
 @import 'fixes';
+@import '404';
 @import 'login';
 @import 'profile';
 @import 'sidebar';
