Fixing issue #88 and grouping with fix #90 (to keep it cleaner)

--- a/app/src/renderer/styles/core/_login.scss
+++ b/app/src/renderer/styles/core/_login.scss
@@ -18,8 +18,12 @@
   }
 }
 
-#react-root section[data-reactroot] > div:last-of-type {
-  display: none;
+.not-logged-in #react-root section[data-reactroot] {
+  & > div:last-of-type,
+  & > nav > div > div > div:last-of-type,
+  & > main > article > div > div:last-of-type {
+    display: none;
+  }
 }
 
 /* Center login */
