Fix following/follow/edit profile buttons color in dark mode

--- a/app/src/renderer/styles/theme-dark/_profile.scss
+++ b/app/src/renderer/styles/theme-dark/_profile.scss
@@ -46,6 +46,11 @@ html.dark-mode #react-root ._bkw5z._kjym7 {
   color: $bright;
 }
 
+/* follow/following/edit profile buttons */
+html.dark-mode #react-root ._dzx3o {
+  color: $bright;
+}
+
 /* profile picture */
 html.dark-mode #react-root ._8gpiy {
   border-color: $dark;
