--- a/app/src/renderer/styles/app.scss
+++ b/app/src/renderer/styles/app.scss
@@ -1,6 +1,8 @@
 /* Ramme */
+@import 'core/header';
 @import 'core/fixes';
 @import 'core/404';
 @import 'core/login';
 @import 'core/profile';
 @import 'core/sidebar';
+@import 'core/other';
