--- a/app/src/renderer/styles/core/_sidebar.scss
+++ b/app/src/renderer/styles/core/_sidebar.scss
@@ -35,7 +35,7 @@
 /* Icons list */
 #react-root ._n7q2c {
   -webkit-app-region: drag;
-  margin-top: 80px;
+  margin-top: 130px;
   flex-direction: column;
 }
 
@@ -49,24 +49,32 @@ html.os-win32 #react-root ._n7q2c {
 #react-root ._r1svv {
   width: 100%;
   height: 40px;
-  margin: 20px 0;
+  margin: 15px 0;
+}
+
+/* Hide upload photo tooltip */
+#react-root ._pd08p._k2p2r {
+  display: none;
 }
 
 /* Back Button */
 .back-btn {
   position: fixed;
-  width: 78px;
+  z-index: 1;
+  width: 79px;
   left: 0px;
-  top: 35px;
+  top: 44px;
+  height: 47px;
   border-top: 1px solid rgba(0, 0, 0, 0.0784314);
   border-bottom: 1px solid rgba(0, 0, 0, 0.0784314);
-  padding: 15px 0;
 }
 
 html.os-linux .back-btn,
 html.os-win32 .back-btn { top: 0; }
 
 .back-btn a {
+  position: relative;
+  top: 14px;
   width: 24px;
   height: 18px;
   display: block;
