feat: fixed layout issues

--- a/app/src/renderer/styles/core/_login.scss
+++ b/app/src/renderer/styles/core/_login.scss
@@ -18,6 +18,10 @@
   }
 }
 
+._nl1vc._445wt._b3en3._7shjj {
+  display: none;
+}
+
 .not-logged-in #react-root section[data-reactroot] {
   & > div:last-of-type,
   & > nav > div > div > div:last-of-type,
