--- a/app/src/renderer/styles/core/_other.scss
+++ b/app/src/renderer/styles/core/_other.scss
@@ -13,5 +13,8 @@
  */
 #react-root ._cbomp {
     //left: 80px;
-    z-index: 99999;
+}
+
+#react-root ._ehe50, #react-root ._cbomp {
+    left: 80px;
 }
