--- a/app/src/renderer/styles/core/_header.scss
+++ b/app/src/renderer/styles/core/_header.scss
@@ -1,14 +1,14 @@
 /* make room for sidebar */
 #react-root ._l1b8m {
-    left: 80px;
+    margin-left: 79px;
+    border-left: 1px solid rgba(0,0,0,.08);
+    box-sizing: border-box;
 }
 
-/* Discover button, move to sidebar */
+/* Close button in photo upload */
 #react-root ._4f1xy._s402c {
-    //display: none;
+    display: none;
 }
 
-/* Settings */
-#react-root ._4f1xy._e8x6x {
-    //visibility: visible;
-}
+/* Upload dialog text */
+._mkc2a { height: 100vh; }
