--- a/app/src/renderer/styles/core/_sidebar.scss
+++ b/app/src/renderer/styles/core/_sidebar.scss
@@ -1,7 +1,14 @@
 /* Make room for sidebar */
-.logged-in #react-root main._1wptv {
-  margin-left: 80px;
+.logged-in #react-root ._8f735._e4u5z {
+    margin-left: 80px;
 }
+.logged-in #react-root ._a4zs2,
+.logged-in #react-root ._a2t9f {
+  margin-left: 80px;
+  border-left: 1px solid rgba(0,0,0,.08);
+  box-sizing: border-box;
+}
+.logged-in #react-root ._a4zs2 { margin-left: 79px!important; }
 
 /* Add sidebar */
 #react-root ._onabe {
@@ -49,7 +56,7 @@ html.os-win32 #react-root ._n7q2c {
 #react-root ._r1svv {
   width: 100%;
   height: 40px;
-  margin: 15px 0;
+  margin-top: 20px;
 }
 
 /* Hide upload photo tooltip */
