Hackish fixes for #82 #104 #101 #100 #109 #102
Use of base64 encoded images to avoid errors and few css tweaks

--- a/app/src/renderer/styles/theme-dark/_fixes.scss
+++ b/app/src/renderer/styles/theme-dark/_fixes.scss
@@ -93,3 +93,8 @@ html.dark-mode ._4y3e3 {
   border-color: $darkLight;
   background-color: $dark;
 }
+
+/*Unreadable text on the "Edit Profile" button*/
+._ah57t._6y2ah._frcv2._rmr7s {
+  color: #fafafa;
+}
