--- a/app/src/renderer/styles/theme-dark/_fixes.scss
+++ b/app/src/renderer/styles/theme-dark/_fixes.scss
@@ -98,3 +98,18 @@ html.dark-mode ._4y3e3 {
 ._ah57t._6y2ah._frcv2._rmr7s {
   color: #fafafa;
 }
+
+/*Header*/
+html.dark-mode ._l1b8m {
+  background-color: $darkLight;
+}
+
+/*Header text*/
+html.dark-mode ._tkl3w {
+  color: #fafafa;
+}
+
+/*Unreadable text on the "Following" button*/
+html.dark-mode ._ah57t._6y2ah._i46jh._rmr7s {
+  color: #fafafa;
+}
