--- a/app/src/renderer/styles/theme-dark/_sidebar.scss
+++ b/app/src/renderer/styles/theme-dark/_sidebar.scss
@@ -14,6 +14,7 @@ html.dark-mode #react-root ._r1svv {
 html.dark-mode .back-btn {
   border-top: 1px solid rgba(255, 255, 255, 0.0784314);
   border-bottom: 1px solid rgba(255, 255, 255, 0.0784314);
+  background-color: rgb(32, 44, 58);
 }
 
 html.dark-mode .back-btn svg { fill: $white; }
