--- a/app/src/renderer/styles/core/_header.scss
+++ b/app/src/renderer/styles/core/_header.scss
@@ -3,6 +3,7 @@
     margin-left: 79px;
     border-left: 1px solid rgba(0,0,0,.08);
     box-sizing: border-box;
+    background-color: $light;
 }
 
 /* Close button in photo upload */
