--- a/app/src/renderer/styles/core/_other.scss
+++ b/app/src/renderer/styles/core/_other.scss
@@ -1,20 +1,28 @@
 /* Hide empty container */
-._s1xpw._44kmz { display: none; }
+
+._s1xpw._44kmz {
+  display: none;
+}
+
 
 /**
  * Settings modal
  */
+
 #react-root ._jkiz5 {
-    left: 80px;
+  left: 80px;
 }
+
 
 /**
  * Search drop down
  */
+
 #react-root ._cbomp {
-    //left: 80px;
+  //left: 80px;
 }
 
-#react-root ._ehe50, #react-root ._cbomp {
-    left: 80px;
+#react-root ._ehe50,
+#react-root ._cbomp {
+  left: 80px;
 }
