--- a/app/src/renderer/styles/core/_header.scss
+++ b/app/src/renderer/styles/core/_header.scss
@@ -1,15 +1,28 @@
 /* make room for sidebar */
-#react-root ._l1b8m {
+
+#react-root header {
+  &._l1b8m, &._q44m8 {
     margin-left: 79px;
-    border-left: 1px solid rgba(0,0,0,.08);
+    border-left: 1px solid $sidebar-border;
+    border-color: $sidebar-border;
     box-sizing: border-box;
     background-color: $light;
+  }
+  &._l1b8m::before{
+    background-color: $sidebar-border;
+  }
 }
+
 
 /* Close button in photo upload */
+
 #react-root ._4f1xy._s402c {
-    display: none;
+  display: none;
 }
 
+
 /* Upload dialog text */
-._mkc2a { height: 100vh; }
+
+._mkc2a {
+  height: 100vh;
+}
