--- a/app/src/renderer/styles/theme-dark/_profile.scss
+++ b/app/src/renderer/styles/theme-dark/_profile.scss
@@ -219,13 +219,13 @@ html.dark-mode #react-root ._bgfey {
 
 
 /* inputs */
-
-html.dark-mode #react-root ._9pfjt,
-html.dark-mode #react-root ._g6a4a,
-html.dark-mode #react-root ._cmoxu ._qy55y {
-  background-color: #303b47;
-  border: none;
-  color: $bright;
+html.dark-mode #react-root {
+  ._2j83n, ._9pfjt, ._g6a4a,._cmoxu ._qy55y,
+  ._1n8j5._qy55y {
+    background-color: #303b47;
+    border: none;
+    color: $bright;
+  }
 }
 
 
